...
        setObservers()
        setupUI()
        viewModel.fetchArticlesList()
    }
    
    private func setupUI(){
        title = "Article List"
        articlesTableView.tableFooterView = UIView()
        self.articlesTableView.refreshControl = self.refresher
        self.refresher.addTarget(self, action: #selector(self.handleRefresher), for: .valueChanged)
        articlesTableView.register(UINib(nibName: "ArticleTableViewCell", bundle: nil), forCellReuseIdentifier: "ArticleTableViewCell")
    }
    
...
