...
                            <constraint firstItem="nOh-6n-Pae" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Xor-JQ-OfX"/>
                            <constraint firstItem="nOh-6n-Pae" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="zbr-kz-2G6"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="qwA-qh-7of">
                        <barButtonItem key="backBarButtonItem" title=" " id="cpB-Bx-AVW"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="IqA-Fn-OH3">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="searchAction:" destination="BYZ-38-t0r" id="fU5-gq-Ovv"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
