//
//  RequeueUITests.swift
//  RequeueUITests
//
//  Created by Mina Malak on 10/25/20.
//

import XCTest

class RequeueUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()
    }
    
    func testSearch(){
        
        let app = XCUIApplication()
        app.launch()
        sleep(1)
        app.navigationBars["Article List"].buttons["Search"].tap()
        
        let tKey = app.keys["T"]
        tKey.tap()
        
        let rKey = app.keys["r"]
        rKey.tap()
        
        let uKey = app.keys["u"]
        uKey.tap()
        app.buttons["search"].tap()
        app.otherElements["PopoverDismissRegion"].tap()
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
